Use abstract data attribute